tests/typechecker/should_fail/type_annotations_16.csp
c :: Bool=>Event
channel c : Int
